# vk_comments_monitor

./: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  vk_config.v2.json
config/: settings.py
scripts/: vk_comments_monitor.py
src/: cache.py  json_redis_migration.py  logger.py  redis_setup.py  redis_thread_processing_migration.py  repository.py  tg.py  tg_test.py  vk.py  vk_comments_parser.py
src/vk/: api.py  classes.py  comments_parser.py  formatters.py  mappers.py  models.py  registry.py  services.py  text_formatting.py
src/vk/migrations/: json_redis_migration.py  redis_migration_001.py  redis_migration_001_keys_deletion.py  redis_migration_002.py  redis_migration_003.py  redis_migration_004.py  redis_migration_005.py
tatd_bot/: bot.py  logger.py  repository.py
tatd_bot/config/: settings.py
tatd_bot/tg/: bot_runner.py  buttons.py  filters.py  formatters.py  lexicon.py  messages.py
tatd_bot/vk/: api.py  comments_parser.py  formatters.py  mappers.py  models.py  registry.py  services.py
tatd_bot/vk/migrations/: json_redis_migration.py  redis_migration_001.py  redis_migration_001_keys_deletion.py  redis_migration_002.py  redis_migration_003.py  redis_migration_004.py  redis_migration_005.py
