[project]
name = "tatd-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "dotenv>=0.9.9",
    "playwright>=1.50.0",
    "playwright-stealth>=1.0.6",
    "pytest-playwright>=0.7.0",
    "requests>=2.32.3",
    "selenium>=4.29.0",
    "setuptools>=75.8.2",
    "telebot>=0.0.5",
    "telegram>=0.0.1",
    "vk-api",
]

[tool.uv.sources]
vk-api = { git = "https://github.com/python273/vk_api.git" }
