[project]
name = "tatd-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "dotenv>=0.9.9",
    "playwright>=1.50.0",
    "redis>=7.0.1",
    "requests>=2.32.3",
    "setuptools>=75.8.2",
    "telebot>=0.0.5",
    "telegram>=0.0.1",
    "yadisk>=3.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]
