[project]
name = "tatd-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.24.0",
    "dotenv>=0.9.9",
    "petrovich>=2.0.1",
    "redis>=7.0.1",
    "requests>=2.32.3",
    "telegram>=0.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]
